hphp/hack/test/typecheck/xhp/required_attr/inheritance.php.shallow_decl.exp
File "inheritance.php", line 6, characters 10-20:
Required attribute `:a` is missing. (Typing[4314])
  File "inheritance.php", line 3, characters 45-45:
  The attribute `:a` is declared here.
